--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,16 @@
 
 .text-brand { font-weight: 800; }
 
+.rounded-top-0 {
+	border-top-left-radius: 0!important;
+	border-top-right-radius: 0!important;
+}
+
+.rounded-bottom-0 {
+	border-bottom-left-radius: 0!important;
+	border-bottom-right-radius: 0!important;
+}
+
 #landingHero .card { margin: 8rem 0 3rem 0; }
 @media (orientation: landscape) {
 	#landingHero .card { margin: 9rem 0 5rem 0; }
@@ -84,3 +94,27 @@ section#question.hide { max-height: 0; }
 }
 
 #team .social > a:hover, #team .social > a:active { color: var(--bs-dark); }
+
+#loaderModal {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(0,0,0,.5);
+	z-index: 9999;
+}
+
+#loaderModal, #loaderModal > .loading-component, #loaderModal > .error-component {
+	display: none;
+}
+
+#loaderModal.is-show {
+	display: flex;
+}
+
+#loaderModal.is-loading > .loading-component, #loaderModal.is-error > .error-component {
+	display: block;
+}
