--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,8 @@
 
 .text-brand { font-weight: 800; }
 
+.font-weight-800 { font-weight: 800; }
+
 .rounded-top-0 {
 	border-top-left-radius: 0!important;
 	border-top-right-radius: 0!important;
